vcs/specs/L1-core/meta/errors/invalid_meta_call.vr
// @test: parse-fail
// @level: L1
// @tags: meta, macros, errors
// @timeout: 5000

/// Tests that invalid meta call syntax is rejected.

// Empty @ with no identifier
fn bad_at() {
    let x = @;
}

fn main() {
    print("Invalid meta call error tests");
}
